# scPertEval

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GUIDE.md  api.md  conf.py  contributing.md  index.md  installation.md  references.bib  tutorials.md
docs/_templates/autosummary/: class.rst
docs/extensions/: protocol_table.py  typed_returns.py
docs/user-guide/: building-blocks.md  calibration.md  index.md  protocols.md  scoring.md  usage.md
epps/: __init__.py  calibrators.py  cli.py  context.py  dataset.py  io.py  reference.py  registry.py  runner.py  sources.py  types.py
epps/blocks/: __init__.py  de.py  kernels.py  spaces.py
epps/protocols/: __init__.py  algorithms.py  metrics.py  table.py
publication/: README.md  deg_jaccard_figure.py  drf_table_figure.py  epps-publication-figures.ipynb  timing_table.py
scperteval/: calibrators.py  cli.py  context.py  dataset.py  io.py  predictions.py  reference.py  registry.py  runner.py  sources.py  types.py
scperteval/blocks/: __init__.py  de.py  spaces.py
scperteval/protocols/: __init__.py  metrics.py  table.py
src/scperteval/: __init__.py  calibrators.py  cli.py  context.py  dataset.py  io.py  predictions.py  reference.py  registry.py  runner.py  sources.py  types.py
src/scperteval/blocks/: de.py  spaces.py
src/scperteval/protocols/: __init__.py  metrics.py  table.py
tests/: conftest.py  test_calibrate.py  test_cli.py  test_de.py  test_score.py
