[project]
name = "scperteval"
version = "0.1.0"
description = "Evaluation Protocols for Perturbation Studies: per-metric DRF/BDS calibration on a single preprocessed dataset."
requires-python = ">=3.10"
dependencies = [
    "anndata",
    "scanpy",
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
    "geomloss",
    "torch",
    "illico",
    "h5py",
]

[project.scripts]
scperteval = "scperteval.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scperteval"]
